// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SConfirm component > should support click confirm button and close modal 1`] = `
<div
  class="ant-popover ant-popconfirm css-dev-only-do-not-override-3rel02 css-dev-only-do-not-override-3rel02 ant-popover-placement-top"
  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
>
  <div
    class="ant-popover-arrow"
    style="position: absolute; bottom: 0px; left: 0px;"
  />
  <div
    class="ant-popover-content"
  >
    <div
      class="ant-popover-inner"
      role="tooltip"
    >
      <div
        class="ant-popover-inner-content"
      >
        <div
          class="ant-popconfirm-inner-content"
        >
          <div
            class="ant-popconfirm-message"
          >
            <span
              class="ant-popconfirm-message-icon"
            >
              <span
                aria-label="exclamation-circle"
                class="anticon anticon-exclamation-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="exclamation-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                  />
                </svg>
              </span>
            </span>
            <div
              class="ant-popconfirm-message-text"
            >
              <div
                class="ant-popconfirm-title"
              >
                删除提示
              </div>
              <div
                class="ant-popconfirm-description"
              >
                是否确认删除该条信息
              </div>
            </div>
          </div>
          <div
            class="ant-popconfirm-buttons"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-3rel02 ant-btn-default ant-btn-sm"
              type="button"
            >
              <span>
                否
              </span>
            </button>
            <button
              class="ant-btn css-dev-only-do-not-override-3rel02 ant-btn-primary ant-btn-sm"
              type="button"
            >
              <span>
                是
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SConfirm component > should support custom title and description with type modal 1`] = `
<div>
  <div>
    <button
      class="ant-btn css-dev-only-do-not-override-3rel02 ant-btn-default modalConfirmBtn"
      type="button"
    >
      <span>
        Open Modal
      </span>
    </button>
  </div>
</div>
`;

exports[`SConfirm component > should support modal type 1`] = `undefined`;

exports[`SConfirm component > should type default Popconfirm 1`] = `
<div
  class="ant-popover-content"
>
  <div
    class="ant-popover-inner"
    role="tooltip"
  >
    <div
      class="ant-popover-inner-content"
    >
      <div
        class="ant-popconfirm-inner-content"
      >
        <div
          class="ant-popconfirm-message"
        >
          <span
            class="ant-popconfirm-message-icon"
          >
            <span
              aria-label="exclamation-circle"
              class="anticon anticon-exclamation-circle"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="exclamation-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                />
              </svg>
            </span>
          </span>
          <div
            class="ant-popconfirm-message-text"
          >
            <div
              class="ant-popconfirm-title"
            >
              删除提示
            </div>
            <div
              class="ant-popconfirm-description"
            >
              是否确认删除该条信息
            </div>
          </div>
        </div>
        <div
          class="ant-popconfirm-buttons"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-3rel02 ant-btn-default ant-btn-sm"
            type="button"
          >
            <span>
              否
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-3rel02 ant-btn-primary ant-btn-sm"
            type="button"
          >
            <span>
              是
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SConfirm component should support click confirm button and close modal 1`] = `
<div
  class="ant-popover ant-popconfirm css-dev-only-do-not-override-1r287do css-dev-only-do-not-override-1r287do ant-popover-placement-top"
  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
>
  <div
    class="ant-popover-arrow"
    style="position: absolute; bottom: 0px; left: 0px;"
  />
  <div
    class="ant-popover-content"
  >
    <div
      class="ant-popover-inner"
      role="tooltip"
    >
      <div
        class="ant-popover-inner-content"
      >
        <div
          class="ant-popconfirm-inner-content"
        >
          <div
            class="ant-popconfirm-message"
          >
            <span
              class="ant-popconfirm-message-icon"
            >
              <span
                aria-label="exclamation-circle"
                class="anticon anticon-exclamation-circle"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="exclamation-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                  />
                </svg>
              </span>
            </span>
            <div
              class="ant-popconfirm-message-text"
            >
              <div
                class="ant-popconfirm-title"
              >
                删除提示
              </div>
              <div
                class="ant-popconfirm-description"
              >
                是否确认删除该条信息
              </div>
            </div>
          </div>
          <div
            class="ant-popconfirm-buttons"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-1r287do ant-btn-default ant-btn-sm"
              type="button"
            >
              <span>
                否
              </span>
            </button>
            <button
              class="ant-btn css-dev-only-do-not-override-1r287do ant-btn-primary ant-btn-sm"
              type="button"
            >
              <span>
                是
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SConfirm component should support modal type 1`] = `undefined`;

exports[`SConfirm component should type default Popconfirm 1`] = `
<div
  class="ant-popover-content"
>
  <div
    class="ant-popover-inner"
    role="tooltip"
  >
    <div
      class="ant-popover-inner-content"
    >
      <div
        class="ant-popconfirm-inner-content"
      >
        <div
          class="ant-popconfirm-message"
        >
          <span
            class="ant-popconfirm-message-icon"
          >
            <span
              aria-label="exclamation-circle"
              class="anticon anticon-exclamation-circle"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="exclamation-circle"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                />
              </svg>
            </span>
          </span>
          <div
            class="ant-popconfirm-message-text"
          >
            <div
              class="ant-popconfirm-title"
            >
              删除提示
            </div>
            <div
              class="ant-popconfirm-description"
            >
              是否确认删除该条信息
            </div>
          </div>
        </div>
        <div
          class="ant-popconfirm-buttons"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-1r287do ant-btn-default ant-btn-sm"
            type="button"
          >
            <span>
              否
            </span>
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-1r287do ant-btn-primary ant-btn-sm"
            type="button"
          >
            <span>
              是
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
